<resources>
    <string name="app_name">MyTaxiAndroid</string>
    <string name="my_taxi_android_challenge">My Taxi Android Challenge</string>
    <string name="show_drivers_list">Show Drivers List</string>
    <string name="id_colon">ID :</string>
    <string name="fleet_type_colon">Fleet Type :</string>
    <string name="latitude_colon">Latitude :</string>
    <string name="lat_colon">Lat :</string>
    <string name="lon_colon">Long :</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="bounds_1_colon">Bounds 1 :</string>
    <string name="bounds_2_colon">Bounds 2 :</string>
    <string name="reset_latlng">Reset LatLng</string>
</resources>
