<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".features.main.ui.MainActivity">

    <TextView
        android:id="@+id/main_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/my_taxi_android_challenge"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/main_screen_show_drivers_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/show_drivers_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent" />


    <TableLayout
        android:layout_width="273dp"
        android:layout_height="295dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/main_screen_show_drivers_list_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title_text">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space android:layout_column="1" />

            <TextView
                android:id="@+id/main_screen_lat_col_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="@string/latitude" />


            <TextView
                android:id="@+id/main_screen_lon_col_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:text="@string/longitude" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/bounds_1_colon" />

            <EditText
                android:id="@+id/main_screen_lat1_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:inputType="numberDecimal"
                android:text="53.694865"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/main_screen_lon1_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:hint="2323232323.33"
                android:inputType="numberDecimal"
                android:text="9.757589"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/bounds_2_colon" />

            <EditText
                android:id="@+id/main_screen_lat2_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:inputType="numberDecimal"
                android:text="53.394655"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/main_screen_lon2_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:inputType="numberDecimal"
                android:text="10.099891"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space android:layout_column="1" />

            <Button
                android:id="@+id/main_screen_reset_lat_lng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="@string/reset_latlng" />

            <Space android:layout_column="3" />
        </TableRow>

    </TableLayout>


</android.support.constraint.ConstraintLayout>