<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="driver"
            type="com.example.mrrexz.mytaxiandroid.features.driversearch.model.vo.Driver"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <TextView
            android:id="@+id/id_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/id_colon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/driver_list_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="01123123131232131011231231312321310112"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:text="@{driver.id}"
            app:layout_constraintStart_toEndOf="@+id/id_title_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/driver_list_fleet_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fleet_type_colon"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driver_list_id" />

        <TextView
            android:id="@+id/driver_list_fleet_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="POOLING"
            android:text="@{driver.fleetType}"
            app:layout_constraintStart_toEndOf="@+id/driver_list_fleet_type_text"
            app:layout_constraintTop_toTopOf="@id/driver_list_fleet_type_text"
            tools:layout_editor_absoluteY="51dp" />

        <TextView
            android:id="@+id/driver_list_lat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lat_colon"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driver_list_fleet_type_text" />

        <TextView android:id="@+id/driver_list_lat"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/driver_list_lat_text"
            app:layout_constraintTop_toBottomOf="@+id/driver_list_id"
            app:layout_constraintTop_toTopOf="@id/driver_list_lat_text"
            android:setTextDouble="@{driver.coord.lat}"
            android:hint="53.470096427876534"
            android:layout_marginLeft="8dp"
            />

        <TextView
            android:id="@+id/driver_list_lon_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/lon_colon"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/driver_list_lat"
            app:layout_constraintTop_toTopOf="@+id/driver_list_lat" />

        <TextView
            android:id="@+id/driver_list_lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:setTextDouble="@{driver.coord.lon}"
            android:layout_marginLeft="8dp"
            android:hint="10.010977580640507"
            app:layout_constraintStart_toEndOf="@id/driver_list_lon_text"
            app:layout_constraintTop_toTopOf="@+id/driver_list_lon_text" />


    </android.support.constraint.ConstraintLayout>
</layout>